# orchestrator

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DASHBOARD_PROPOSAL.md  DASHBOARD_PROPOSAL_V2.md  DASHBOARD_PROPOSAL_V2_CHANGES.md  DOGFOODING_ANALYSIS.md  INTEGRATION_GUIDE.md  Multi-Agent_Orchestration.md  POSSIBLE_ENHANCEMENTS.md  PRE_RELEASE_CHECKLIST.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  TESTING_PHASE1_SUMMARY.md  TEST_COVERAGE_ANALYSIS.md  TEST_RESULTS_2025-11-08.md  TEST_RESULTS_PHASE1.md  WORKFLOW_ORDER.md  migrate_logs.py  pyproject.toml  requirements.txt
.claude/: CLAUDE_CODE_ENHANCEMENTS.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  config.yaml
.claude/commands/: check-arch.md  deploy-dashboard.md  release-prep.md  task-debug.md  test-full.md
.claude/hooks/: pre-commit.sh
dashboard/: .env.example  PHASE1_SUMMARY.md  README.md  docker-compose.yml
dashboard/backend/: .env.example  Dockerfile  README.md  alembic.ini  migration_fix.sql  requirements.txt
dashboard/frontend/: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json
docs/: WORKFLOW_PLANNING_ARCHITECTURE.md
docs/archive/: DASHBOARD_PROPOSAL_V2.md  README.md
examples/: basic_orchestration.py  manual_agent_control.py  manual_integration_test.py  observability_demo.py  parallel_execution.py  specialized_agents.py
src/orchestrator/: __init__.py
tests/: NEXT_STEPS.md  QUICK_REFERENCE.md  TEST_REPORT.md  test_analyst_workflow_selection.py  test_cli.py  test_context_parser.py  test_database.py  test_docstring_examples.py  test_observability.py  test_orchestrator.py  test_prompts.py  test_type_hints.py
tests/fixtures/: mock_responses.json  sample_tasks.json
tests/integration/: __init__.py  conftest.py  (+1 more)
(+58 files in other folders)
